<resources>
    <string name="app_name">Exercicio4</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_telefone">Telefone</string>
    <string name="txt_cpf">CPF</string>
    <string name="txt_endereco">Endereco</string>
    <string name="txt_cidade">Cidade</string>
    <string name="txt_titulo">Preencha seus dados</string>
</resources>